bk_ida/gccida/g2/lex_number
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1320:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1349:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v54; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1353:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v58; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1355:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v60; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1356:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v61; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1358:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v63; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1360:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v65; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1370:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v75; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1386:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v91; // [rsp+8h] [rbp-108h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1388:12: error: expected expression
lex_number::anon1 floatflag; // [rsp+18h] [rbp-F8h] 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1391:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *spec_long_long; // [rsp+28h] [rbp-E8h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1393:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *warn; // [rsp+38h] [rbp-D8h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1412:20: error: expected expression
v24 = ( tree_node *)*( &global_trees + 12); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1412:9: error: use of undeclared identifier 'tree_node'
v24 = ( tree_node *)*( &global_trees + 12); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1443:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v2] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1466:7: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v12 = sch_istable[( unsigned __int8)v11]; 
      ^~~~~~~~~~~
      _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1470:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v13 = hex_value[( unsigned __int8)v3]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1473:6: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v8 = hex_value[( unsigned __int8)v3]; 
     ^~~~~~~~~
     _hex_value
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/c-lex.c:1564:1: error: use of undeclared identifier 'floatflag'
floatflag = NOT_FLOAT; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/lex_number/src/obj/c-lex.o] Error 1
